--- a/src/components/overwriteEditor.css
+++ b/src/components/overwriteEditor.css
@@ -4,7 +4,7 @@
   border: 1px solid #b1b1b1;
   position: sticky;
   top: 0;
-  height: 10%;
+
   border-radius: 4px 4px 0px 0px;
 }
 
@@ -35,31 +35,24 @@
 
 .sun-editor {
   border: none;
-  height: 100%;
-}
-
-.sun-editor .se-wrapper .se-wrapper-inner {
-  min-height: 408px !important;
-  overflow-y: hidden !important;
-  overflow-x: hidden !important;
-  height: 100%;
+  height: 100% !important;
 }
 .sun-editor .se-container {
   height: 100%;
 }
-.sun-editor .se-wrapper {
-  overflow: auto;
-  height: 90%;
-  overflow-x: hidden;
-  border-left: 1px solid #b1b1b1;
+.sun-editor .se-wrapper-inner {
+  min-height: 408px !important;
+  border-left:1px solid #b1b1b1 ;
   border-right: 1px solid #b1b1b1;
-  overflow-y: auto;
 }
 
 .sun-editor-editable p {
   margin: 0px !important;
 }
-
+.sun-editor .se-wrapper {
+  height: 90%;
+  overflow: hidden !important;
+}
 .sun-editor .se-resizing-bar {
   position: fixed;
   top: 100%;
